resources/assets/scss/_orders.scss
  .slide-right-fixed{
    .fa-ellipsis-v{
        font-size:22px;
    }
  }
  @media (min-width: 320px) and (max-width: 767.98px) {
    .slide-right-fixed{
        position: fixed;
        background: #fff;
        right: -1000px;
        top: 74px;
        transition: all 0.5s ease;
        z-index: 999;
        .product-detail{
           width: 75%;
        }
    }
    .slide-right-fixed.active{
        right: 0px;
        position: absolute;
        top: 73px;
        padding-top: 20px;

    }
    #kss_shipment{
        .kss_product_list{
            width: 100% !important;
        }
        .product-detail{
            width: 75% !important;
        }
        .card-body {
            padding: .7rem;
        }
    }
}


.cd-cart-items {
    .dropdown{
        position: absolute;
        right: 12px;
        top: 12px;
        .fa-ellipsis-v{
          font-size:22px;
        }
    }
    .product-name{
        width: 350px;
        @media (min-width: 320px) and (max-width: 767.98px) {
            width: 180px
        }
       @media (min-width: 768px) and (max-width: 991.98px) {
            width: 190px;
        }
    }
}

.status-progress-wrap{
    display: flex;
    margin: 22px auto;
    padding: 18px 0 0;
    position: relative;
}
.status-progress-bar-wrap{
  position:absolute;
  width:100%;
  top:0px;
  height:4px;
  background:#dfdfdf;
  border-radius:10px;
}
.status-progress-bar{
  background: #4CAF50;
  height:100%;
  width:10%;
  border-radius:10px;
  display:inline-flex;
  vertical-align:top;
  justify-content:flex-end;
  transition:width 1s linear ;
}
.status-wrap{
  display:inline-flex;
  flex-direction: column;
  background:#fff;
  width:25%;
  align-items: center;
  position:relative;
}
.status-wrap span{
  color:#ddd;
  transition:all ease 0.25s;
}
.status-wrap:hover span{
  color:#03A9F4;
  transition:all ease 0.3s;
}
.status-wrap::after{
  content:"";
  width:10px;
  height:10px;
  margin-top:-21px;
  background: #dfdfdf;
  display:inline-block;
  vertical-align:top;
  transform: scale(1.25);
  transform-origin:center;
  border-radius:50%;
  position:absolute;
  top:0;
}

.status-wrap::before{
  content:"";
  width:10px;
  height:10px;
  margin-top:-21px;
  background: #4caf50;
  display:inline-block;
  vertical-align:top;
  transform: scale(0);
  transform-origin:center;
  border-radius:50%;
  position:absolute;
  top:0;
  z-index:2;
  transition:all ease .7s;
}
.status-wrap.active::before{
  transform: scale(1.25);
   transition:all ease .7s; 
}
.status-wrap.active::after{
  display:none !important;
}

.status-wrap:nth-child(2){
  align-items: flex-start;
}
.status-wrap:last-child{
  align-items: flex-end;
}

.order-card{
  &__detail{
    width: 60%;
  }
  .product-name{
    width: auto;
  }
}

.myorder-wrapper{
  height: calc(100% - 80px);
}

.order-no-row{
  .col-left{
    flex-basis: 60%;
  }
  .col-right{
    flex-basis: 30%;
  }
}

.order-header{
    padding: 1em 0;
}

// my order

.my-order-card{
    box-shadow: 0 0 5px rgb(241, 241, 241);
    padding: 0 8px;
    background-color: #fff;
    cursor: pointer;
    .arrow-down{
      transform: rotate(0deg);
      transition: all 0.5s ease;
    }
    .collapsed{
      .arrow-down{
        transform: rotate(180deg);
      }
    }
    .ordercollapse-trigger{
      padding: 5px 10px 5px 0;
    }
    .collapse{
      border-top: 1px solid #e8e8e8;
      padding: 10px 8px;
    }
}

.my-order-bg{
    margin: 0 -20px;
    padding: 0 20px;
    background-color: #efefef;
    padding-top: 20px;
}

.no-order-login{
  font-size: 1.3em;
  text-align: center;
}

